global: fix msg whitespace for NL and VN languages

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1455,4 +1455,12 @@
             ._3SW-z { c: cm }
         }
     }
+
+    // Fix whitespace for message content/timestamp. @upstream
+    html {
+        &[lang = 'vn'], &[lang = 'nl'] {
+            .EopGb { width: 56px }
+            ._2COY9 { width: 92px }
+        }
+    }
 }
